refactor odb settings and readback

--- a/smu-2450.html
+++ b/smu-2450.html
@@ -88,19 +88,19 @@
                <tr>
                   <td>
                      <div align="center">
-                        <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/source">
+                        <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/source/function">
                            <option value="VOLT">VOLTAGE</option>
                            <option value="CURR">CURRENT</option>
                         </select>
                      </div>
                   </td>   
                   <td>
-                     <div class="modbvalue" data-format="%f4" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source level" align="center"/>
+                     <div class="modbvalue" data-format="%f4" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source/level" align="center"/>
                   </td>   
                   <td>
                      <div align="center">
                         <div style="display: inline">
-                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/source Vrange">
+                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/source/Vrange">
                               <option>auto</option>
                               <option>20mV</option>
                               <option>200mV</option>
@@ -109,13 +109,13 @@
                               <option>200V</option>
                            </select>
                         </div>
-                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/source Vrange" align="center"/>
+                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/source/Vrange" align="center"/>
                      </div>
                   </td>
                   <td>
                      <div align="center">
                         <div style="display: inline">
-                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/source Irange">
+                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/source/Irange">
                               <option>auto</option>
                               <option>10nA</option>
                               <option>100nA</option>
@@ -128,7 +128,7 @@
                               <option>1A</option>
                            </select>
                         </div>
-                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/source Irange" align="center"/>
+                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/source/Irange" align="center"/>
                      </div>
                   </td>
                </tr>
@@ -148,19 +148,19 @@
                <tr>
                   <td>
                      <div align="center">
-                        <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/measure">
+                        <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/measure/function">
                            <option value='"VOLT:DC"'>VOLTAGE</option>
                            <option value='"CURR:DC"'>CURRENT</option>
                         </select>
                      </div>
                   </td>   
                   <td>
-                     <div class="modbvalue" data-odb-path="/Equipment/SMU-2450-01/Settings/measure level" align="center"/>
+                     <div class="modbvalue" data-odb-path="/Equipment/SMU-2450-01/Readback/measure/level" align="center"/>
                   </td>   
                   <td>
                      <div align="center">
                         <div style="display: inline">
-                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/measure Vrange">
+                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/measure/Vrange">
                               <option>auto</option>
                               <option>20mV</option>
                               <option>200mV</option>
@@ -169,13 +169,13 @@
                               <option>200V</option>
                            </select>
                         </div>
-                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/measure Vrange" align="center"/>
+                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/measure/Vrange" align="center"/>
                      </div>
                   </td>
                   <td>
                      <div align="center">
                         <div style="display: inline">
-                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/measure Irange">
+                           <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/measure/Irange">
                               <option>auto</option>
                               <option>10nA</option>
                               <option>100nA</option>
@@ -188,7 +188,7 @@
                               <option>1A</option>
                            </select>
                         </div>
-                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/measure Irange" align="center"/>
+                        <div style="display: inline" class="modbvalue" data-format="%f4" data-odb-path="/Equipment/SMU-2450-01/Readback/measure/Irange" align="center"/>
                      </div>
                   </td>
                </tr>
@@ -214,10 +214,10 @@
                      </div>
                   </td>
                   <td>
-                     <div class="modbvalue" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source Vlimit" align="center"/>
+                     <div class="modbvalue" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source/Vlimit" align="center"/>
                   </td>
                   <td>
-                     <div class="modbvalue" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source Ilimit" align="center"/>
+                     <div class="modbvalue" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source/Ilimit" align="center"/>
                   </td>
                </tr>
             </table>
@@ -234,10 +234,7 @@
             </div>
          </td>
       </tr>
-
-      
    </table>
-   
 </div>
 </body>
 </html>
