update custom page

--- a/smu-2450.html
+++ b/smu-2450.html
@@ -140,22 +140,17 @@
          <td style="width: 80%">
             <table class="mtable" style="width: 100%">
                <tr>
-                  <th></th>
-                  <th>level</th>
+                  <th>voltage</th>
+                  <th>current</th>
                   <th>V range</th>
                   <th>I range</th>
                </tr>
                <tr>
                   <td>
-                     <div align="center">
-                        <select class="modbselect" data-odb-path="/Equipment/SMU-2450-01/Settings/measure/function">
-                           <option value='"VOLT:DC"'>VOLTAGE</option>
-                           <option value='"CURR:DC"'>CURRENT</option>
-                        </select>
-                     </div>
+                     <div class="modbvalue" data-odb-path="/Equipment/SMU-2450-01/Readback/measure/voltage" align="center"/>
                   </td>   
                   <td>
-                     <div class="modbvalue" data-odb-path="/Equipment/SMU-2450-01/Readback/measure/level" align="center"/>
+                     <div class="modbvalue" data-odb-path="/Equipment/SMU-2450-01/Readback/measure/current" align="center"/>
                   </td>   
                   <td>
                      <div align="center">
