--- a/smu-2450.html
+++ b/smu-2450.html
@@ -95,7 +95,8 @@
                      </div>
                   </td>   
                   <td>
-                     <div class="modbvalue" data-format="%f4" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source/level" align="center"/>
+                     <div class="modbvalue" data-format="%f4" data-odb-editable="1"
+                     data-odb-path="/Equipment/SMU-2450-01/Settings/source/level" align="center"></div>
                   </td>   
                   <td>
                      <div align="center">
@@ -209,10 +210,12 @@
                      </div>
                   </td>
                   <td>
-                     <div class="modbvalue" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source/Vlimit" align="center"/>
+                     <div class="modbvalue" data-odb-editable="1"
+                     data-odb-path="/Equipment/SMU-2450-01/Settings/source/Vlimit" align="center"></div>
                   </td>
                   <td>
-                     <div class="modbvalue" data-odb-editable="1" data-odb-path="/Equipment/SMU-2450-01/Settings/source/Ilimit" align="center"/>
+                     <div class="modbvalue" data-odb-editable="1"
+                     data-odb-path="/Equipment/SMU-2450-01/Settings/source/Ilimit" align="center"/></div>
                   </td>
                </tr>
             </table>
